<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright (C) 2017 Advanced Card Systems Ltd. All rights reserved.

    This software is the confidential and proprietary information of Advanced
    Card Systems Ltd. ("Confidential Information").  You shall not disclose such
    Confidential Information and shall use it only in accordance with the terms
    of the license agreement you entered into with ACS.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context="com.acs.bletest.MainActivity">

    <!-- Terminal -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terminal"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/activity_main_spinner_terminal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <Button
            android:id="@+id/activity_main_button_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/activity_main_button_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/activity_main_button_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconnect"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <!-- Protocol -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protocol"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/activity_main_checkbox_t0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t0" />

        <CheckBox
            android:id="@+id/activity_main_checkbox_t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t1" />

    </LinearLayout>

    <!-- Control Code -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control_code"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/activity_main_edit_text_control_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:importantForAutofill="no"
            android:hint="@string/hint_control_code"
            android:minHeight="48dp" />

    </LinearLayout>

    <!-- Source -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/activity_main_radio_button_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input" />

            <RadioButton
                android:id="@+id/activity_main_radio_button_script"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_script" />
        </RadioGroup>

        <Button
            android:id="@+id/activity_main_button_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <!-- Script -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/script"
            android:textSize="18sp" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/activity_main_text_view_filename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/activity_main_button_select_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_file"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/activity_main_button_transmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transmit"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/activity_main_button_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <TextView
        android:id="@+id/activity_main_text_view_log"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:typeface="monospace"
        android:textSize="12sp" />

</LinearLayout>
