<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright (C) 2019 Advanced Card Systems Ltd. All rights reserved.

    This software is the confidential and proprietary information of Advanced
    Card Systems Ltd. ("Confidential Information").  You shall not disclose such
    Confidential Information and shall use it only in accordance with the terms
    of the license agreement you entered into with ACS.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <!-- Terminal name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terminal"
                android:textSize="18sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/dialog_terminal_timeouts_text_view_terminal_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/dialog_terminal_timeouts_check_box_use_default_timeout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_default_timeout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeouts"
            android:textSize="18sp" />

        <!-- Connection timeout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:labelFor="@id/dialog_terminal_timeouts_edit_text_connection_timeout"
                android:text="@string/connection_timeout"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/dialog_terminal_timeouts_edit_text_connection_timeout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp" />

        </LinearLayout>

        <!-- Power timeout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:labelFor="@id/dialog_terminal_timeouts_edit_text_power_timeout"
                android:text="@string/power_timeout"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/dialog_terminal_timeouts_edit_text_power_timeout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp" />

        </LinearLayout>

        <!-- Protocol timeout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:labelFor="@id/dialog_terminal_timeouts_edit_text_protocol_timeout"
                android:text="@string/protocol_timeout"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/dialog_terminal_timeouts_edit_text_protocol_timeout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp" />

        </LinearLayout>

        <!-- APDU timeout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:labelFor="@id/dialog_terminal_timeouts_edit_text_apdu_timeout"
                android:text="@string/apdu_timeout"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/dialog_terminal_timeouts_edit_text_apdu_timeout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp" />

        </LinearLayout>

        <!-- Control timeout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:labelFor="@id/dialog_terminal_timeouts_edit_text_control_timeout"
                android:text="@string/control_timeout"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/dialog_terminal_timeouts_edit_text_control_timeout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
